# ProjectSilver

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE-3RD-PARTY.md  LICENSE-ASSETS.md  LICENSE.md  ProjectSilver.sln  README.md
LICENSES/: LUCKY-LION-STUDIOS.md
ProjectSilver/: CMakeLists.txt
ProjectSilver/include/ProjectSilver/: AI.hpp  Actor.hpp  AfterImage.hpp  AnimatedSprite.hpp  Animation.hpp  AssetManager.hpp  AudioEngine.hpp  BasicText.hpp  BoxCollider.hpp  ChaserAI.hpp  Collider.hpp  CollisionMaster.hpp  ConfigHandler.hpp  Drawable.hpp  Effect.hpp  Entity.hpp  FighterAI.hpp  FighterBullet.hpp  GameMaster.hpp  Globals.hpp  GraphicsEngine.hpp  GunTurretAI.hpp  InputHandler.hpp  KnightAI.hpp  LevelDirector.hpp  LogHandler.hpp  Medkit.hpp  MenuDirector.hpp  MiscUtility.hpp  PCHeader.hpp  Player.hpp  PlayerPseudoAI.hpp  RenderComponent.hpp  RifleAmmoPack.hpp  ShadowAI.hpp  ShadowHPBar.hpp  SphereCollider.hpp  Sprite.hpp  Tracer.hpp
ProjectSilver/resx/assets/Fonts/: CourierPrime24.fnt  CourierPrime36.fnt  CourierPrime48.fnt  CourierPrime72.fnt
ProjectSilver/src/ProjectSilver/: AI.cpp  AI.ixx  Actor.cpp  Actor.ixx  AfterImage.cpp  AfterImage.ixx  AnimatedSprite.cpp  AnimatedSprite.ixx  Animation.cpp  Animation.ixx  AssetManager.cpp  AssetManager.ixx  AudioEngine.cpp  AudioEngine.ixx  BasicText.cpp  BasicText.ixx  BoxCollider.cpp  BoxCollider.ixx  ChaserAI.cpp  ChaserAI.ixx  Collider.cpp  Collider.ixx  CollisionMaster.cpp  CollisionMaster.ixx  ConfigHandler.cpp  ConfigHandler.ixx  Drawable.cpp  Drawable.ixx  Effect.cpp  Effect.ixx  Entity.cpp  Entity.ixx  FighterAI.cpp  FighterAI.ixx  FighterBullet.cpp  FighterBullet.ixx  GameMaster.cpp  GameMaster.ixx  Globals.cpp  Globals.ixx  (+37 more)
Windows/: AI.cpp  AI.h  Actor.cpp  Actor.h  AfterImage.cpp  AfterImage.h  AnimatedSprite.cpp  AnimatedSprite.h  Animation.cpp  Animation.h  AssetManager.cpp  AssetManager.h  AudioEngine.cpp  AudioEngine.h  BasicText.cpp  BasicText.h  BoxCollider.cpp  BoxCollider.h  ChaserAI.cpp  ChaserAI.h  Collider.cpp  Collider.h  CollisionMaster.cpp  CollisionMaster.h  ConfigHandler.cpp  ConfigHandler.h  Drawable.cpp  Drawable.h  Effect.cpp  Effect.h  Entity.cpp  Entity.h  ErrorLogging.cpp  ErrorLogging.h  FighterAI.cpp  FighterAI.h  FighterBullet.cpp  FighterBullet.h  GameMaster.cpp  GameMaster.h  (+46 more)
modules/: cpp20modules.cmake
